--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,6 @@ include(':Frontend')
 include(':Application')
 include(':Utilities')
 include(':IntegrationTests')
+include(':ServiceLambdaModel')
+include(':ServiceLambdaJavaClient')
+include(':ServiceLambda')
