--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -13,8 +13,8 @@ checkstyle {
 }
 
 dependencies {
-    implementation project(":ReferralServiceLambdaModel")
-    implementation project(":ReferralServiceLambdaJavaClient")
+    implementation project(":ServiceLambdaModel")
+    implementation project(":ServiceLambdaJavaClient")
     implementation 'org.springframework.boot:spring-boot-starter:2.6.3'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
