--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "learn-and-be-curious-static-website",
-  "description": "Website for the ATA Learn and Be Curious project",
+  "name": "capstone-static-website",
+  "description": "Website for the SEBD capstone project",
   "version": "1.0.0",
   "license": "UNLICENSED",
   "main": "js/index.js",
@@ -11,11 +11,11 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "webpack -p --mode=production --devtool=source-map",
-    "start": "webpack-dev-server -d --mode=development --hot --inline",
-    "clean": "rm -rf dist"
+    "start": "webpack-dev-server -d --mode=development --hot --inline"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "clean-webpack-plugin": "^4.0.0",
     "toastify-js": "^1.11.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
