--- a/buildScripts/buildspec.yml
+++ b/buildScripts/buildspec.yml
@@ -13,6 +13,7 @@ phases:
       - aws cloudformation package --template-file LambdaService-template.yml --s3-bucket $ARTIFACT_BUCKET --output-template-file lambda-service.yml
       - aws s3 cp Application/build/libs/Application-0.0.1-SNAPSHOT.jar s3://$ARTIFACT_BUCKET/
       - aws cloudformation package --template-file Application-template.yml --s3-bucket $ARTIFACT_BUCKET --output-template-file application.yml
+      - rm -rf Frontend/node_modules
 reports:
   app-jacoco-report:
     files:
