--- a/buildSrc/src/main/groovy/ata-curriculum.integration-test-conventions.gradle
+++ b/buildSrc/src/main/groovy/ata-curriculum.integration-test-conventions.gradle
@@ -2,7 +2,10 @@ plugins {
   id 'idea'
 }
 
-
+dependencies {
+  implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
+  testImplementation files('../gradle/lib/testinfrastructure-1.0.1.jar')
+}
 
 sourceSets {
   integrationTest {
