--- a/buildScripts/CICDPipeline-Capstone.yml
+++ b/buildScripts/CICDPipeline-Capstone.yml
@@ -3,6 +3,8 @@ Parameters:
     Type: String
   GithubUserName:
     Type: String
+  GithubGroupName:
+    Type: String
   Repo:
     Type: String
   Branch:
@@ -104,7 +106,7 @@ Resources:
         - ''
         - - !Ref ProjectName
           - '-'
-          - !Ref GithubUserName
+          - !Ref GithubGroupName
           - '-artifacts'
       VersioningConfiguration:
         Status: Enabled
@@ -129,7 +131,7 @@ Resources:
               - ''
               - - !Ref ProjectName
                 - '-'
-                - !Ref GithubUserName
+                - !Ref GithubGroupName
                 - '-datastore'
           - Name: ARTIFACT_BUCKET
             Type: PLAINTEXT
@@ -138,7 +140,7 @@ Resources:
         - ''
         - - !Ref ProjectName
           - '-'
-          - !Ref GithubUserName
+          - !Ref GithubGroupName
           - '-Build'
       ServiceRole: !GetAtt BuildExecutionRole.Arn
       Source:
@@ -165,7 +167,7 @@ Resources:
               - ''
               - - !Ref ProjectName
                 - '-'
-                - !Ref GithubUserName
+                - !Ref GithubGroupName
                 - '-application'
           - Name: SERVICE_STACK_NAME
             Type: PLAINTEXT
@@ -173,13 +175,13 @@ Resources:
               - ''
               - - !Ref ProjectName
                 - '-'
-                - !Ref GithubUserName
+                - !Ref GithubGroupName
                 - '-service'
       Name: !Join
         - ''
         - - !Ref ProjectName
           - '-'
-          - !Ref GithubUserName
+          - !Ref GithubGroupName
           - '-IntegrationTestBuild'
       ServiceRole: !GetAtt BuildExecutionRole.Arn
       Source:
@@ -200,7 +202,7 @@ Resources:
         - ''
         - - !Ref ProjectName
           - '-'
-          - !Ref GithubUserName
+          - !Ref GithubGroupName
           - '-Webhook'
       TargetPipelineVersion: !GetAtt Pipeline.Version
       RegisterWithThirdParty: true
@@ -214,7 +216,7 @@ Resources:
         - ''
         - - !Ref ProjectName
           - '-'
-          - !Ref GithubUserName
+          - !Ref GithubGroupName
           - '-Pipeline'
       RoleArn: !GetAtt PipelineRole.Arn
       Stages:
@@ -265,7 +267,7 @@ Resources:
                   - ''
                   - - !Ref ProjectName
                     - '-'
-                    - !Ref GithubUserName
+                    - !Ref GithubGroupName
                     - '-service'
                 TemplatePath: 'CompiledArtifact::lambda-service.yml'
               InputArtifacts:
@@ -291,13 +293,13 @@ Resources:
                       - ''
                       - - !Ref ProjectName
                         - '-'
-                        - !Ref GithubUserName
+                        - !Ref GithubGroupName
                 RoleArn: !GetAtt DeployCloudFormationRole.Arn
                 StackName: !Join
                   - ''
                   - - !Ref ProjectName
                     - '-'
-                    - !Ref GithubUserName
+                    - !Ref GithubGroupName
                     - '-application'
                 TemplatePath: 'CompiledArtifact::application.yml'
               InputArtifacts:
