--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,19 +10,19 @@
   },
   "scripts": {
     "prepublishOnly": "npm run build",
-    "build": "webpack -p --mode=production --devtool=source-map",
-    "start": "webpack-dev-server -d --mode=development --hot --inline"
+    "build": "webpack --mode production --env production --devtool=source-map",
+    "start": "webpack-dev-server --devtool=eval-source-map --mode=development --env=development --hot"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^1.3.5",
     "clean-webpack-plugin": "^4.0.0",
     "toastify-js": "^1.11.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^6.4.1",
-    "html-webpack-plugin": "4"
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.0"
   }
 }
