--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.data.dynamodb.entity2ddl.auto = create-only
 spring.data.dynamodb.entity2ddl.gsiProjectionType = ALL
 spring.data.dynamodb.entity2ddl.readCapacity = 10
 spring.data.dynamodb.entity2ddl.writeCapacity = 1
+spring.lifecycle.timeout-per-shutdown-phase=30s
 dynamodb.override_endpoint=false
 time.to.purchase.ticket=120
 management.endpoint.health.enabled=true
@@ -12,3 +13,4 @@ management.metrics.export.prometheus.enabled=true
 management.metrics.export.cloudwatch.enabled=true
 management.metrics.export.cloudwatch.namespace=ticket-system
 management.metrics.export.cloudwatch.batchSize=20
+server.shutdown=graceful
