--- a/LambdaService-template.yml
+++ b/LambdaService-template.yml
@@ -138,7 +138,7 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /drink/{id}
+            Path: /drinks/{id}
             Method: get
   AddDrinkFunction:
     Type: AWS::Serverless::Function
@@ -169,7 +169,7 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /drink
+            Path: /drinks
             Method: post
   DeleteDrinkByIdFunction:
     Type: AWS::Serverless::Function
@@ -200,7 +200,7 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /drink/{id}
+            Path: /drinks/{id}
             Method: delete
   GetIngredientByIdFunction:
     Type: AWS::Serverless::Function
@@ -231,7 +231,7 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /ingredient/{id}
+            Path: /ingredients/{id}
             Method: get
   AddIngredientFunction:
     Type: AWS::Serverless::Function
@@ -262,7 +262,7 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /ingredient
+            Path: /ingredients
             Method: post
   DeleteIngredientByIdFunction:
     Type: AWS::Serverless::Function
@@ -293,7 +293,7 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /ingredient/{id}
+            Path: /ingredients/{id}
             Method: delete
   UpdateDrinkFunction:
     Type: AWS::Serverless::Function
@@ -324,7 +324,7 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /drink/{id}
+            Path: /drinks/{id}
             Method: put
   UpdateIngredientFunction:
     Type: AWS::Serverless::Function
@@ -355,7 +355,7 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /ingredient/{id}
+            Path: /ingredients/{id}
             Method: put
   GetAllDrinksFunction:
     Type: AWS::Serverless::Function
@@ -386,7 +386,7 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /drink
+            Path: /drinks/all
             Method: get
   GetAllIngredientsFunction:
     Type: AWS::Serverless::Function
@@ -417,6 +417,6 @@ Resources:
         UpdateResource:
           Type: Api
           Properties:
-            Path: /ingredient
+            Path: /ingredients/all
             Method: get
 
