--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -15,18 +15,19 @@ checkstyle {
 dependencies {
     implementation project(":ServiceLambdaModel")
     implementation project(":ServiceLambdaJavaClient")
-    implementation 'org.springframework.boot:spring-boot-starter:2.6.3'
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.6.3'
-    
+    implementation 'org.springframework:spring-context:5.3.19'
+    implementation 'org.springframework:spring-core:5.3.15'
+    implementation 'org.springframework:spring-beans:5.3.20'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-function-adapter-aws:3.2.2'
+
     implementation group: 'io.github.boostchicken', name: 'spring-data-dynamodb', version: '5.2.1'
     implementation 'io.springfox:springfox-swagger2:3.0.0'
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
-    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'com.google.guava:guava:32.0.0-android'
     implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.9.3'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '2.6.3'
-    
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     implementation group: 'io.micrometer', name: 'micrometer-core', version: '1.8.3'
     implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.8.3'
@@ -35,8 +36,8 @@ dependencies {
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-aws-actuator', version: '2.2.6.RELEASE'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.6.RELEASE'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.6'
-    implementation 'com.google.dagger:dagger:2.30'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.30'
+    implementation group: 'redis.clients', name: 'jedis', version: '3.0.1'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.6.3'
 
     runtimeOnly group: 'software.amazon.awssdk', name: 'bom', version: '2.17.131', ext: 'pom'
     runtimeOnly 'org.apache.logging.log4j:log4j-slf4j18-impl:2.17.0'
@@ -44,7 +45,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     testImplementation group: 'org.testcontainers', name: 'testcontainers', version: '1.16.3'
-
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'net.andreinc:mockneat:0.4.8'
 
