--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.data.dynamodb.entity2ddl.gsiProjectionType = ALL
 spring.data.dynamodb.entity2ddl.readCapacity = 10
 spring.data.dynamodb.entity2ddl.writeCapacity = 1
 spring.lifecycle.timeout-per-shutdown-phase=30s
+redis.host=localhost
+redis.port=6379
 dynamodb.override_endpoint=false
 time.to.purchase.ticket=120
 management.endpoint.health.enabled=true
