--- a/ServiceLambda/build.gradle
+++ b/ServiceLambda/build.gradle
@@ -9,19 +9,24 @@ checkstyle {
 
 dependencies {
     implementation project(":ServiceLambdaModel")
+    implementation 'org.springframework.cloud:spring-cloud-function-adapter-aws:3.2.2'
+    implementation 'org.springframework:spring-context:5.3.19'
+    implementation 'org.springframework:spring-core:5.3.15'
+    implementation 'org.springframework:spring-beans:5.3.20'
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.1'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.15'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.261'
     implementation group: 'com.opencsv', name: 'opencsv', version: '5.5'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.12.49'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.6.3'
+
 
     implementation 'com.amazonaws:aws-java-sdk-bom:1.12.47'
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.1'
     implementation 'com.amazonaws:aws-lambda-java-events:3.6.0'
-    implementation 'com.google.dagger:dagger:2.30'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.30'
+    implementation group: 'redis.clients', name: 'jedis', version: '3.0.1'
 
 
 
@@ -31,8 +36,8 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
     testImplementation 'net.andreinc:mockneat:0.4.7'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    implementation group: 'redis.clients', name: 'jedis', version: '3.0.1'
 }
 
 task buildZip(type: Zip) {
