--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -13,12 +13,13 @@ checkstyle {
 }
 
 dependencies {
+    implementation project(":ServiceLambda")
     implementation project(":ServiceLambdaModel")
     implementation project(":ServiceLambdaJavaClient")
     implementation 'org.springframework:spring-context:5.3.19'
     implementation 'org.springframework:spring-core:5.3.15'
     implementation 'org.springframework:spring-beans:5.3.20'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.6'
     implementation 'org.springframework.cloud:spring-cloud-function-adapter-aws:3.2.2'
 
     implementation group: 'io.github.boostchicken', name: 'spring-data-dynamodb', version: '5.2.1'
@@ -42,10 +43,13 @@ dependencies {
     runtimeOnly group: 'software.amazon.awssdk', name: 'bom', version: '2.17.131', ext: 'pom'
     runtimeOnly 'org.apache.logging.log4j:log4j-slf4j18-impl:2.17.0'
 
+    testImplementation("org.springframework.data:spring-data-commons:2.6.2")
+    testImplementation("org.springframework:spring-tx:5.3.16")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     testImplementation group: 'org.testcontainers', name: 'testcontainers', version: '1.16.3'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation'org.springframework.boot:spring-boot-starter-web:2.6.6'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'net.andreinc:mockneat:0.4.8'
 
