--- a/ServiceLambda/build.gradle
+++ b/ServiceLambda/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'org.springframework:spring-context:5.3.19'
     implementation 'org.springframework:spring-core:5.3.15'
     implementation 'org.springframework:spring-beans:5.3.20'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.6'
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.1'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.261'
@@ -32,6 +33,10 @@ dependencies {
 
     runtimeOnly 'org.apache.logging.log4j:log4j-slf4j18-impl:2.17.1'
 
+    testImplementation("org.springframework.data:spring-data-commons:2.6.2")
+    testImplementation("org.springframework:spring-tx:5.3.16")
+    testImplementation('org.springframework.boot:spring-boot-starter-web:2.6.6')
+    testImplementation('org.springframework.boot:spring-boot-starter-test:2.6.3')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
