--- a/ServiceLambdaJavaClient/build.gradle
+++ b/ServiceLambdaJavaClient/build.gradle
@@ -9,12 +9,11 @@ checkstyle {
 
 dependencies {
     implementation project(":ServiceLambdaModel")
-    implementation project(":Application")
     implementation 'org.springframework:spring-context:5.3.19'
     implementation 'org.springframework:spring-core:5.3.15'
     implementation 'org.springframework:spring-beans:5.3.20'
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.1'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3'
     implementation group: 'com.amazonaws', name: 'aws-java-sdk-api-gateway', version: '1.12.147'
     implementation group: 'com.amazonaws', name: 'aws-java-sdk-lambda', version: '1.12.23'
     implementation 'com.amazonaws:aws-java-sdk-core:1.12.237'
@@ -24,22 +23,26 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.12.49'
-    implementation 'org.springframework.beans:factory.annotation'
     implementation 'com.amazonaws:aws-java-sdk-bom:1.12.47'
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.1'
     implementation 'com.amazonaws:aws-lambda-java-events:3.6.0'
     implementation group: 'redis.clients', name: 'jedis', version: '3.0.1'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-aws-actuator', version: '2.2.6.RELEASE'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.6.RELEASE'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.6'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.6.3'
-
 
 
     runtimeOnly 'org.apache.logging.log4j:log4j-slf4j18-impl:2.17.1'
 
+    testImplementation("org.springframework.data:spring-data-commons:2.6.2")
+    testImplementation("org.springframework:spring-tx:5.3.16")
+    testImplementation('org.springframework.boot:spring-boot-starter-web:2.6.3')
+    testImplementation('org.springframework.boot:spring-boot-starter-test:2.6.3')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
     testImplementation 'net.andreinc:mockneat:0.4.7'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 task buildZip(type: Zip) {
@@ -48,6 +51,10 @@ task buildZip(type: Zip) {
     into('lib') {
         from configurations.runtimeClasspath
     }
+}
+
+repositories {
+    mavenCentral()
 }
 
 java {
