--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'net.andreinc:mockneat:0.4.8'
-
+    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis'
     developmentOnly("org.springframework.boot:spring-boot-devtools")
 }
 
