--- a/CoffeeTables.yml
+++ b/CoffeeTables.yml
@@ -1,42 +1,38 @@
+AWSTemplateFormatVersion: '2010-09-09'
 Resources:
   # DynamoDB table for Drinks
   DrinksTable:
     Type: AWS::DynamoDB::Table
     Properties:
-      "AttributeDefinitions":
-        - "AttributeName": "id"
-          "AttributeType": "S"
-        - "AttributeName": "name"
-          "AttributeType": "S"
-        - "AttributeName": "recipe"
-          "AttributeType": "S"
-        - "AttributeName": "ingredients"
-          "AttributeType": "L"
-      "KeySchema":
-        - "AttributeName": "id"
-          "KeyType": "HASH"
+      TableName: DrinksTable
+      AttributeDefinitions:
+        - AttributeName: id
+          AttributeType: S
+      KeySchema:
+        - AttributeName: id
+          KeyType: HASH
       BillingMode: PAY_PER_REQUEST
-      TableName: "Drinks"
+      Tags:
+        - Key: Name
+          Value: DrinksTable
       PointInTimeRecoverySpecification:
         PointInTimeRecoveryEnabled: false
-
 
   #DynamoDB table for Ingredients
   IngredientsTable:
     Type: AWS::DynamoDB::Table
     Properties:
-      "AttributeDefinitions":
-        - "AttributeName": "id"
-          "AttributeType": "S"
-        - "AttributeName": "name"
-          "AttributeType": "S"
-        - "AttributeName": "quantity"
-          "AttributeType": "N"
-      "KeySchema":
-        - "AttributeName": "id"
-          "KeyType": "HASH"
+      TableName: IngredientsTable
+      AttributeDefinitions:
+        - AttributeName: id
+          AttributeType: S
+      KeySchema:
+        - AttributeName: id
+          KeyType: HASH
       BillingMode: PAY_PER_REQUEST
-      TableName: "Ingredients"
+      Tags:
+        - Key: Name
+          Value: IngredientsTable
       PointInTimeRecoverySpecification:
         PointInTimeRecoveryEnabled: false
 
