--- a/IntegrationTests/build.gradle
+++ b/IntegrationTests/build.gradle
@@ -9,7 +9,10 @@ configurations {
 }
 
 dependencies {
+    implementation project(":ServiceLambdaModel")
     implementation project(":Application")
+    implementation project(":ServiceLambda")
+    implementation project(":ServiceLambdaJavaClient")
     testImplementation('org.springframework.boot:spring-boot-starter-web:2.6.3')
     testImplementation('org.springframework.boot:spring-boot-starter-test:2.6.3')
 
@@ -19,11 +22,11 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:4.4.0'
     testImplementation 'net.andreinc:mockneat:0.4.7'
 
+    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     testImplementation group: 'io.micrometer', name: 'micrometer-core', version: '1.8.3'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
     testImplementation("org.springframework.data:spring-data-commons:2.6.2")
     testImplementation("org.springframework:spring-tx:5.3.16")
-    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
