making sure all changes are updated

--- a/Application/src/main/resources/application-local.properties
+++ b/Application/src/main/resources/application-local.properties
@@ -3,6 +3,7 @@ spring.data.dynamodb.entity2ddl.auto=create-only
 spring.data.dynamodb.entity2ddl.gsiProjectionType=ALL
 spring.data.dynamodb.entity2ddl.readCapacity=10
 spring.data.dynamodb.entity2ddl.writeCapacity=1
+spring.main.allow-bean-definition-overriding=true
 dynamodb.override_endpoint=true
 dynamodb.endpoint=http://localhost:8000
 time.to.purchase.ticket=60
