--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.data.dynamodb.entity2ddl.gsiProjectionType = ALL
 spring.data.dynamodb.entity2ddl.readCapacity = 10
 spring.data.dynamodb.entity2ddl.writeCapacity = 2
 spring.lifecycle.timeout-per-shutdown-phase=30s
+spring.main.allow-bean-definition-overriding=true
 redis.host=localhost
 redis.port=6379
 dynamodb.override_endpoint=false
