--- a/buildSrc/src/main/groovy/ata-curriculum.integration-test-conventions.gradle
+++ b/buildSrc/src/main/groovy/ata-curriculum.integration-test-conventions.gradle
@@ -21,7 +21,7 @@ configurations {
   integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
 }
 
-task integrationTest(type: Test) {
+tasks.register('integrationTest', Test) {
   description = 'Runs integration tests'
   group = 'verification'
 
