--- a/ServiceLambdaJavaClient/build.gradle
+++ b/ServiceLambdaJavaClient/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     testImplementation 'net.andreinc:mockneat:0.4.7'
 }
 
-task buildZip(type: Zip) {
+tasks.register('buildZip', Zip) {
     from compileJava
     from processResources
     into('lib') {
