--- a/ServiceLambdaModel/build.gradle
+++ b/ServiceLambdaModel/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     testImplementation 'net.andreinc:mockneat:0.4.7'
 }
 
-task buildZip(type: Zip) {
+tasks.register('buildZip', Zip) {
     from compileJava
     from processResources
     into('lib') {
